# dbray

./: LICENSE  README.md  buffer.py  camera.py  dbray.py  material.py  raytracer.py  scene.py  setup.cfg  setup.py  sphere.py  window.py
dbray/: aabb.py  camera.py  dbray.py  extpolygon.py  material.py  plane.py  scene.py  sphere.py  terrain.py  transform.py  triangle.py  window.py
dbray/shaders/: fragment.glsl  vertex.glsl
examples/: realscene.py  simplescene.py
shaders/: fragment.glsl  test.glsl  vertex.glsl
tests/: conftest.py  test_raytracer.py  test_scene.py  test_sphere.py  test_transform.py
