[metadata]
name = dbray
version = 0.1.0
author = David Berthiaume
author_email = odlantern@gmail.com
description = A custom GPU raytracer
long_description = file: README.md
long_description_content_type = text/markdown
url =
classifiers =
    Programming Language :: Python :: 3
    License :: MIT 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6